force-app/main/default/objects/BMCServiceDesk__LinkUnlink_History__c/BMCServiceDesk__LinkUnlink_History__c.object-meta.xml
<CustomObject>
    <description>Tracks the old and new values of fields in the Base Element object that are selected for auditing. This object is also used to track the linking or unlinking of clients to a CMDB Instance.</description>
    <label>CMDB Auditing</label>
    <nameField>
        <displayFormat>Link-Unlink History {00000000}</displayFormat>
        <label>Link-Unlink History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMDB Auditing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>