force-app/main/default/objects/BMCServiceDesk__LinkUnlink_History__c/fields/BMCServiceDesk__Audit_newValue__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Audit_newValue__c</fullName>
    <description>Stores the updated value of a field that is selected for auditing.</description>
    <label>Field New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>