force-app/main/default/objects/BMCServiceDesk__LinkUnlink_History__c/fields/BMCServiceDesk__Field__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>