force-app/main/default/objects/BMCServiceDesk__LinkUnlink_History__c/fields/BMCServiceDesk__NewClient__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__NewClient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Value</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CI_Client_Assignment_Audits1</relationshipName>
    <type>Lookup</type>
</CustomField>