force-app/main/default/objects/BMCServiceDesk__LinkUnlink_History__c/fields/BMCServiceDesk__OldClient__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__OldClient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Value</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CI_Client_Assignment_Audits2</relationshipName>
    <type>Lookup</type>
</CustomField>