force-app/main/default/objects/BMCServiceDesk__LinkUnlink_History__c/fields/BMCServiceDesk__ParentId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ParentId__c</fullName>
    <label>Parent</label>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>CMDB_Auditing</relationshipLabel>
    <relationshipName>CI_Client_Assignment_Audits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>