force-app/main/default/objects/BMCServiceDesk__LinkUnlink_History__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__Field__c</columns>
    <columns>BMCServiceDesk__NewClient__c</columns>
    <columns>BMCServiceDesk__OldClient__c</columns>
    <columns>BMCServiceDesk__ParentId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>